src/test/test-workspace/invalid_configs/104_COMPLETIONS.sqlx
config {
    type: "table",
    bigquery: {
        partitionBy: "",
        clusterBy: [
            ""
        ]
    },
    assertions: {
        nonNull: [""],
        uniqueKey: [""],
        rowConditions: [""]
    }
}
